--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   </header>
 
  <main class="contact-wrap">
-  <img src="./assets/contact-banner.png" alt="Contact Us" class="contact-banner">
+  <img src="./assets/contact-banner1.png" alt="Contact Us" class="contact-banner1">
   <form class="contact-form" action="#" method="post">
     <label>Name <input type="text" name="name" required></label>
     <label>Email <input type="email" name="email" required></label>
