--- a/notebooks.html
+++ b/notebooks.html
@@ -38,7 +38,7 @@
     <img src="./assets/sunlight.png" alt="Shop Sunlight Collection">
   </a>
   <a href="./woodlands.html" class="collection-btn">
-    <img src="./assets/woodlands.png" alt="Shop Woodland Collection">
+    <img src="./assets/woodlands.png" alt="Shop Woodlands Collection">
   </a>
   <a href="./meadows.html" class="collection-btn">
     <img src="./assets/meadows.png" alt="Shop Meadows Collection">
