--- a/notebooks.html
+++ b/notebooks.html
@@ -30,18 +30,18 @@
      alt="Notebook Collections" 
      class="notebooks-banner">
 
-   <section class="collections">
-  <a href="./moonlight.html" class="collection-btn">
-    <img src="./assets/moonlight.png" alt="Shop Moonlight Collection">
+ <section class="collections">
+  <a href="/moonlight.html" class="collection-btn">
+    <img src="/assets/moonlight.png?v=2" alt="Shop Moonlight Collection" loading="lazy">
   </a>
-  <a href="./sunlight.html" class="collection-btn">
-    <img src="./assets/sunlight.png" alt="Shop Sunlight Collection">
+  <a href="/sunlight.html" class="collection-btn">
+    <img src="/assets/sunlight.png?v=2" alt="Shop Sunlight Collection" loading="lazy">
   </a>
-  <a href="./woodlands.html" class="collection-btn">
-    <img src="./assets/woodlands.png" alt="Shop Woodlands Collection">
+  <a href="/woodlands.html" class="collection-btn">
+    <img src="/assets/woodlands.png?v=2" alt="Shop Woodlands Collection" loading="lazy">
   </a>
-  <a href="./meadows.html" class="collection-btn">
-    <img src="./assets/meadows.png" alt="Shop Meadows Collection">
+  <a href="/meadows.html" class="collection-btn">
+    <img src="/assets/meadows.png?v=2" alt="Shop Meadows Collection" loading="lazy">
   </a>
 </section>
    
