--- a/notebooks.html
+++ b/notebooks.html
@@ -30,7 +30,7 @@
      alt="Notebook Collections" 
      class="notebooks-banner">
 
-<section class="collections">
+<section class="notebook collections">
   <a href="/moonlight.html" class="collection-btn">
     <img src="/assets/moonlight.png?v=2" alt="Shop Moonlight Collection" loading="lazy">
   </a>
