--- a/notebooks.html
+++ b/notebooks.html
@@ -31,16 +31,16 @@
      class="notebooks-banner">
 
 <section class="notebook collections">
-  <a href="/moonlight.html" class="collection-btn">
+  <a href="/moonlight.html" class="notebook-collection-btn">
     <img src="/assets/moonlight.png?v=2" alt="Shop Moonlight Collection" loading="lazy">
   </a>
-  <a href="/sunlight.html" class="collection-btn">
+  <a href="/sunlight.html" class="notebook-collection-btn">
     <img src="/assets/sunlight.png?v=2" alt="Shop Sunlight Collection" loading="lazy">
   </a>
-  <a href="/woodlands.html" class="collection-btn">
+  <a href="/woodlands.html" class="notebook-collection-btn">
     <img src="/assets/woodlands.png?v=2" alt="Shop Woodlands Collection" loading="lazy">
   </a>
-  <a href="/meadows.html" class="collection-btn">
+  <a href="/meadows.html" class="notebook-collection-btn">
     <img src="/assets/meadows.png?v=2" alt="Shop Meadows Collection" loading="lazy">
   </a>
 </section>
