--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 <section class="collections">
   <a href="./notebooks.html" class="collection-btn">
-    <img src="./assets/notebook-button.png" alt="Shop Notebooks">
+    <img src="./assets/notebooks-button.png" alt="Shop Notebooks">
   </a>
   <a href="./keychains.html" class="collection-btn">
-    <img src="./assets/keychain-button.png" alt="Shop Keychains">
+    <img src="./assets/keychains-button.png" alt="Shop Keychains">
   </a>
 </section>
 
