--- a/nav/contact.html
+++ b/nav/contact.html
@@ -10,11 +10,11 @@
   <header class="site-header">
     <img class="full-header" src="./assets/header.png" alt="Sylvanian Emporium">
     <nav class="main-nav">
-      <a href="./index.html">Home</a>
-      <a href="./shop.html">Shop</a>
-      <a href="./about.html">About</a>
-      <a href="./faq.html">FAQ</a>
-      <a href="./contact.html" aria-current="page">Contact</a>
+      <a href="./nav/index.html">Home</a>
+      <a href="./nav/shop.html">Shop</a>
+      <a href="./nav/about.html">About</a>
+      <a href="./nav/faq.html">FAQ</a>
+      <a href="./nav/contact.html"  aria-current="page">Contact</a>
     </nav>
   </header>
 
