--- a/nav/index.html
+++ b/nav/index.html
@@ -10,11 +10,11 @@
   <header class="site-header">
     <img class="full-header" src="./assets/header.png" alt="Sylvanian Emporium">
  <nav class="main-nav">
-  <a href="./index.html" aria-current="page">Home</a>
-  <a href="./shop.html">Shop</a>
-  <a href="./about.html">About</a>
-  <a href="./faq.html">FAQ</a>
-  <a href="./contact.html">Contact</a>
+  <a href="./nav/index.html" aria-current="page">Home</a>
+  <a href="./nav/shop.html">Shop</a>
+  <a href="./nav/about.html">About</a>
+  <a href="./nav/faq.html">FAQ</a>
+  <a href="./nav/contact.html">Contact</a>
 </nav>
   </header>
 
