--- a/nav/shop.html
+++ b/nav/shop.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <img class="full-header" src="./assets/header.png" alt="Sylvanian Emporium">
     <nav class="main-nav">
-      <a href="./nav/index.html">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./nav/shop.html" aria-current="page">Shop</a>
       <a href="./nav/about.html">About</a>
       <a href="./nav/faq.html">FAQ</a>
