--- a/nav/contact.html
+++ b/nav/contact.html
@@ -4,55 +4,57 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Sylvanian Emporium</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <header class="site-header">
-    <img class="full-header" src="./assets/header.png" alt="Sylvanian Emporium">
+    <img class="full-header" src="/assets/header.png" alt="Sylvanian Emporium">
     <nav class="main-nav">
-      <a href="./index.html">Home</a>
-      <a href="./nav/shop.html">Shop</a>
-      <a href="./nav/about.html">About</a>
-      <a href="./nav/faq.html">FAQ</a>
-      <a href="./nav/contact.html"  aria-current="page">Contact</a>
+      <a href="/index.html">Home</a>
+      <a href="/nav/shop.html">Shop</a>
+      <a href="/nav/about.html">About</a>
+      <a href="/nav/faq.html">FAQ</a>
+      <a href="/nav/contact.html" aria-current="page">Contact</a>
     </nav>
   </header>
 
- <main class="contact-wrap">
-  <img src="./assets/contact-banner1.png" alt="Contact Us" class="contact-banner1">
-  <form class="contact-form" action="#" method="post">
-    <label>Name <input type="text" name="name" required></label>
-    <label>Email <input type="email" name="email" required></label>
-    <label>Message <textarea name="message" rows="6" required></textarea></label>
-    <button type="submit" class="send-btn">
-  <img src="./assets/send-button.png" alt="Send">
-  <span class="sr-only">Send</span>
-</button>
-  </form>
-</main>
+  <main class="contact-wrap">
+    <img src="/assets/contact-banner1.png" alt="Contact Us" class="contact-banner1">
+    <form class="contact-form" action="#" method="post">
+      <label>Name <input type="text" name="name" required></label>
+      <label>Email <input type="email" name="email" required></label>
+      <label>Message <textarea name="message" rows="6" required></textarea></label>
+      <button type="submit" class="send-btn">
+        <img src="/assets/send-button.png" alt="Send">
+        <span class="sr-only">Send</span>
+      </button>
+    </form>
+  </main>
+
   <!-- Extra banner image beneath the form -->
-<img src="./assets/contact-banner2.png" 
-     alt="Maximum 24 hour response time" 
-     class="contact-banner2">
+  <img src="/assets/contact-banner2.png" 
+       alt="Maximum 24 hour response time" 
+       class="contact-banner2">
 
-     
-<footer class="site-footer">
-  <div class="container">
-    <small>© <span id="year"></span> Sylvanian Emporium</small>
-    <div class="social-links">
-      <a href="https://www.etsy.com/shop/SYLVANIANEMPORIUM" target="_blank" rel="noopener">
-        <img src="./assets/etsy.png" alt="Etsy">
-      </a>
-      <a href="https://instagram.com/SYLVANIAN.EMPORIUM" target="_blank" rel="noopener">
-        <img src="./assets/instagram.png" alt="Instagram">
-      </a>
-      <a href="https://discord.gg/tVnAVeVzAV" target="_blank" rel="noopener">
-        <img src="./assets/discord.png" alt="Discord">
-      </a>
+  <footer class="site-footer">
+    <div class="container">
+      <small>© <span id="year"></span> Sylvanian Emporium</small>
+      <div class="social-links">
+        <a href="https://www.etsy.com/shop/SYLVANIANEMPORIUM" target="_blank" rel="noopener">
+          <img src="/assets/etsy.png" alt="Etsy">
+        </a>
+        <a href="https://instagram.com/SYLVANIAN.EMPORIUM" target="_blank" rel="noopener">
+          <img src="/assets/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://discord.gg/tVnAVeVzAV" target="_blank" rel="noopener">
+          <img src="/assets/discord.png" alt="Discord">
+        </a>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
