--- a/nav/faq.html
+++ b/nav/faq.html
@@ -4,47 +4,50 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FAQ — Sylvanian Emporium</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <header class="site-header">
-    <img class="full-header" src="./assets/header.png" alt="Sylvanian Emporium">
+    <img class="full-header" src="/assets/header.png" alt="Sylvanian Emporium">
     <nav class="main-nav">
-      <a href="./index.html">Home</a>
-      <a href="./nav/shop.html">Shop</a>
-      <a href="./nav/about.html">About</a>
-      <a href="./nav/faq.html"  aria-current="page">FAQ</a>
-      <a href="./nav/contact.html">Contact</a>
-</nav>
+      <a href="/index.html">Home</a>
+      <a href="/nav/shop.html">Shop</a>
+      <a href="/nav/about.html">About</a>
+      <a href="/nav/faq.html" aria-current="page">FAQ</a>
+      <a href="/nav/contact.html">Contact</a>
+    </nav>
   </header>
 
-<main class="faq-wrap">
-  <!-- Your existing FAQ image -->
-  <img src="./assets/faq-page.png" alt="FAQ details" class="faq-hero">
+  <main class="faq-wrap">
+    <!-- FAQ image -->
+    <img src="/assets/faq-page.png" alt="FAQ details" class="faq-hero">
 
-  <!-- Contact button beneath -->
-  <a href="./contact.html" class="image-button">
-    <img src="./assets/contact-button.png" alt="Contact Us">
-  </a>
-</main>
+    <!-- Contact button beneath -->
+    <a href="/nav/contact.html" class="image-button">
+      <img src="/assets/contact-button.png" alt="Contact Us">
+    </a>
+  </main>
        
-<footer class="site-footer">
-  <div class="container">
-    <small>© <span id="year"></span> Sylvanian Emporium</small>
-    <div class="social-links">
-      <a href="https://www.etsy.com/shop/SYLVANIANEMPORIUM" target="_blank" rel="noopener">
-        <img src="./assets/etsy.png" alt="Etsy">
-      </a>
-      <a href="https://instagram.com/SYLVANIAN.EMPORIUM" target="_blank" rel="noopener">
-        <img src="./assets/instagram.png" alt="Instagram">
-      </a>
-      <a href="https://discord.gg/tVnAVeVzAV" target="_blank" rel="noopener">
-        <img src="./assets/discord.png" alt="Discord">
-      </a>
+  <footer class="site-footer">
+    <div class="container">
+      <small>© <span id="year"></span> Sylvanian Emporium</small>
+      <div class="social-links">
+        <a href="https://www.etsy.com/shop/SYLVANIANEMPORIUM" target="_blank" rel="noopener">
+          <img src="/assets/etsy.png" alt="Etsy">
+        </a>
+        <a href="https://instagram.com/SYLVANIAN.EMPORIUM" target="_blank" rel="noopener">
+          <img src="/assets/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://discord.gg/tVnAVeVzAV" target="_blank" rel="noopener">
+          <img src="/assets/discord.png" alt="Discord">
+        </a>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
+
