--- a/coll/notebooks.html
+++ b/coll/notebooks.html
@@ -11,10 +11,10 @@
     <img class="full-header" src="./assets/header.png" alt="Sylvanian Emporium">
  <nav class="main-nav">
   <a href="./index.html">Home</a>
-  <a href="./shop.html">Shop</a>
-  <a href="./about.html">About</a>
-  <a href="./faq.html">FAQ</a>
-  <a href="./contact.html">Contact</a>
+  <a href="./nav/shop.html">Shop</a>
+  <a href="./nav/about.html">About</a>
+  <a href="./nav/faq.html">FAQ</a>
+  <a href="./nav/contact.html">Contact</a>
 </nav>
   </header>
 
@@ -31,16 +31,16 @@
      class="notebooks-banner">
 
 <section class="notebook collections">
-  <a href="/moonlight.html" class="collection-btn">
+  <a href="/coll/moonlight.html" class="collection-btn">
     <img src="/assets/moonlight.png?v=2" alt="Shop Moonlight Collection" loading="lazy">
   </a>
-  <a href="/sunlight.html" class="collection-btn">
+  <a href="/coll/sunlight.html" class="collection-btn">
     <img src="/assets/sunlight.png?v=2" alt="Shop Sunlight Collection" loading="lazy">
   </a>
-  <a href="/woodlands.html" class="collection-btn">
+  <a href="/coll/woodlands.html" class="collection-btn">
     <img src="/assets/woodlands.png?v=2" alt="Shop Woodlands Collection" loading="lazy">
   </a>
-  <a href="/meadows.html" class="collection-btn">
+  <a href="/coll/meadows.html" class="collection-btn">
     <img src="/assets/meadows.png?v=2" alt="Shop Meadows Collection" loading="lazy">
   </a>
 </section>
