--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
      class="index-banner">
 
 <section class="collections">
-  <a href="./notebooks.html" class="collection-btn">
+  <a href="./coll/notebooks.html" class="collection-btn">
     <img src="./assets/notebooks-button.png" alt="Shop Notebooks">
   </a>
-  <a href="./keychains.html" class="collection-btn">
+  <a href="./coll/keychains.html" class="collection-btn">
     <img src="./assets/keychains-button.png" alt="Shop Keychains">
   </a>
 </section>
