--- a/coll/keychains.html
+++ b/coll/keychains.html
@@ -33,7 +33,7 @@
     <!-- Keychains bottom banner -->
     <img src="/assets/notebooks-banner2.png" 
          alt="Keychains Footer" 
-         class="notebook-banner2">
+         class="keychain-banner2">
   </main>
    
   <footer class="site-footer">
