--- a/coll/keychains.html
+++ b/coll/keychains.html
@@ -28,12 +28,12 @@
     <!-- Keychains top banner -->
     <img src="/assets/keychains-banner.png" 
          alt="Keychain Collections" 
-         class="keychain-banner">
+         class="keychains-banner">
 
     <!-- Keychains bottom banner -->
     <img src="/assets/notebooks-banner2.png" 
          alt="Keychains Footer" 
-         class="keychain-banner2">
+         class="keychains-banner2">
   </main>
    
   <footer class="site-footer">
